I added more Languages Special Characters. Still working on it.

--- a/dashboard.html
+++ b/dashboard.html
@@ -245,8 +245,11 @@
         <ul id="special-characters-panel" class="collapsible card" data-collapsible="accordion">
             <li>
                 <div class="collapsible-header"><span style="color:red;">Special Characters</span><span class="notranslate"><i class="material-icons" style="color:red;">translate</i></span></div>
-                <div class="collapsible-body">
-                    <span class="notranslate">
+
+                <ul class="collapsible" data-collapsible="accordion">
+    <li>
+      <div class="collapsible-header">Spanish</div>
+      <div class="collapsible-body"><span class="notranslate">
                     <a class="waves-effect waves-teal btn-flat special-character-tool-button">á</a>
                     <a class="waves-effect waves-teal btn-flat special-character-tool-button">é</a>
                     <a class="waves-effect waves-teal btn-flat special-character-tool-button">í</a>
@@ -255,9 +258,94 @@
                     <a class="waves-effect waves-teal btn-flat special-character-tool-button">ñ</a>
                     <a class="waves-effect waves-teal btn-flat special-character-tool-button">¿</a>
                     <a class="waves-effect waves-teal btn-flat special-character-tool-button">¡</a>
-                    </span>
+                    </span></div>
+    </li>
+    
+<li>
+      <div class="collapsible-header">French</div>
+      <div class="collapsible-body"><span class="notranslate">
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">é</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">à</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">è</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">ù</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">â</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">ê</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">î</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">ô</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">û</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">ç</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">ë</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">ï</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">ü</a>
+                    </span></div>
+    </li>
 
-                </div>
+<li>
+      <div class="collapsible-header">Chinese</div>
+      <div class="collapsible-body"><span class="notranslate">
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">安</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">吧</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">爸</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">八</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">百</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">北</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">不</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">大</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">岛</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">的</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">弟</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">地</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">东</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">都</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">对</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">儿</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">二</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">方</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">港</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">哥</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">个</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">关</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">贵</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">国</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">过</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">海</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">好</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">很</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">会</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">家</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">见</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">叫</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">姐</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">京</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">九</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">可</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">老</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">李</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">零</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">六</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">I left off on M</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    </span></div>
+    </li>
+
+
+<li>
+      <div class="collapsible-header">German</div>
+      <div class="collapsible-body"><span class="notranslate">
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">ä</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">Ä</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">é</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">ö</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">Ö</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">ü</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">Ü</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">ß</a>
+                    </span></div>
+    </li>
+
+  </ul>
             </li>
         </ul>
         </div>
