I added more special characters

--- a/dashboard.html
+++ b/dashboard.html
@@ -327,13 +327,140 @@
                     <a class="waves-effect waves-teal btn-flat special-character-tool-button">李</a>
                     <a class="waves-effect waves-teal btn-flat special-character-tool-button">零</a>
                     <a class="waves-effect waves-teal btn-flat special-character-tool-button">六</a>
-                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">I left off on M</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">吗</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">妈</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">么</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">没</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">美</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">妹</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">们</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">明</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">名</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">哪</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">南</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">你</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">您</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">朋</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">七</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">起</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">千</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">去</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">人</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">认</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">日</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">三</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">上</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">谁</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">什</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">生</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">师</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">识</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">十</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">是</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">四</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">他</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">她</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">台</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">天</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">湾</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">万</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">王</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">我</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">五</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">西</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">息</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">系</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">先</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">香</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">想</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">小</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">谢</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">姓</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">休</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">学</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">也</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">一</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">亿</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">英</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">友</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">月</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">再</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">张</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">这</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">中</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">字</a>
+                    </span></div>
+    </li>
+
+<li>
+      <div class="collapsible-header">Japanese</div>
+      <div class="collapsible-body"><span class="notranslate">
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
                     <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
                     <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
                     <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
                     </span></div>
     </li>
 
+<li>
+      <div class="collapsible-header">Arabic</div>
+      <div class="collapsible-body"><span class="notranslate">
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    </span></div>
+    </li>
+
+<li>
+      <div class="collapsible-header">Korean</div>
+      <div class="collapsible-body"><span class="notranslate">
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    </span></div>
+    </li>
+
+<li>
+      <div class="collapsible-header">Persian</div>
+      <div class="collapsible-body"><span class="notranslate">
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    </span></div>
+    </li>
+
+<li>
+      <div class="collapsible-header">Russian</div>
+      <div class="collapsible-body"><span class="notranslate">
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    </span></div>
+    </li>
 
 <li>
       <div class="collapsible-header">German</div>
@@ -346,6 +473,20 @@
                     <a class="waves-effect waves-teal btn-flat special-character-tool-button">ü</a>
                     <a class="waves-effect waves-teal btn-flat special-character-tool-button">Ü</a>
                     <a class="waves-effect waves-teal btn-flat special-character-tool-button">ß</a>
+                    </span></div>
+    </li>
+
+<li>
+      <div class="collapsible-header">Emojis</div>
+      <div class="collapsible-body"><span class="notranslate">
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button"></a>
                     </span></div>
     </li>
 
