Special characters tool now has a dropdown menu where one can choose betweem different language-specific charsets

--- a/dashboard.html
+++ b/dashboard.html
@@ -240,14 +240,25 @@
             <li>
                 <div class="collapsible-header"><span style="color:red;">Special Characters</span><span class="notranslate"><i class="material-icons" style="color:red;">translate</i></span></div>
                 <div class="collapsible-body">
-                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">á</a>
+                  <div class="input-field col s12">
+                    <select id="special-characterset-select">
+                      <option value="es">Spanish</option>
+                      <option value="fr" selected>French</option>
+                      <option value="de">German</option>
+                      <option value="emoji">Emoji-Speak</option>
+                    </select>
+                    <label>Character Set</label>
+                  </div>
+                  <div class="button-container"></div>
+
+                    <!-- <a class="waves-effect waves-teal btn-flat special-character-tool-button">á</a>
                     <a class="waves-effect waves-teal btn-flat special-character-tool-button">é</a>
                     <a class="waves-effect waves-teal btn-flat special-character-tool-button">í</a>
                     <a class="waves-effect waves-teal btn-flat special-character-tool-button">ó</a>
                     <a class="waves-effect waves-teal btn-flat special-character-tool-button">ú</a>
                     <a class="waves-effect waves-teal btn-flat special-character-tool-button">ñ</a>
                     <a class="waves-effect waves-teal btn-flat special-character-tool-button">¿</a>
-                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">¡</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">¡</a> -->
                 </div>
             </li>
         </ul>
