--- a/educator/educator-dashboard.html
+++ b/educator/educator-dashboard.html
@@ -73,9 +73,22 @@
     <h1 id="school-name"></h1>
     <h3>Your Code: <span id="school-code"></span></h3>
 
-    
+    <!-- <a id="add-school-btn" class="waves-effect waves-light btn">Add Associate School</a> -->
+    <!-- Add School Button -->
+    <a class="waves-effect waves-light btn modal-trigger" href="#add-school-modal">Add Associate School</a>
 
     <div id="users-container">
+    </div>
+
+    <!-- Modal Structure -->
+    <div id="add-school-modal" class="modal">
+      <div class="modal-content">
+        <h4>Add Associate Schools</h4>
+        <p>Adding other schools allows your students </p>
+      </div>
+      <div class="modal-footer">
+        <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+      </div>
     </div>
 </span>
 
