Delete code from Kyle's old messed-up landingpage

--- a/dashboard.html
+++ b/dashboard.html
@@ -140,7 +140,7 @@
               <span class="local-time"></span>
               <span>
                 <a href="#bell-modal" id="bell" style='color:white;'>
-                  <i class="material-icons">notifications_active</i>
+                  <i class="material-icons" style="font-size:25px;">notifications_active</i>
                 </a>
               </span>
             </center>
