Maybe this will fix the landingpage.....

--- a/educator/educator-dashboard.html
+++ b/educator/educator-dashboard.html
@@ -84,7 +84,8 @@
     <div id="add-school-modal" class="modal">
       <div class="modal-content">
         <h4>Add Associate Schools</h4>
-        <p>Adding other schools allows your students </p>
+        <p>Adding other schools allows your students to more easily get in touch.</p>
+
       </div>
       <div class="modal-footer">
         <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
