--- a/educator/educator-dashboard.html
+++ b/educator/educator-dashboard.html
@@ -85,10 +85,26 @@
       <div class="modal-content">
         <h4>Add Associate Schools</h4>
         <p>Adding other schools allows your students to more easily get in touch.</p>
+        <div class="row">
+          <form class="col s12" id="add-school-form">
+            <div class="row">
 
+              <div class="input-field col s6">
+                <input name="school-code" type="text">
+                <label for="school-code">School Code</label>
+              </div>
+            </div>
+
+            <a id="add-btn" class="waves-effect waves-light btn" disabled>Add</a>
+
+          </form>
+        </div>
+        <div class="progress" style="display:none;">
+            <div class="indeterminate"></div>
+        </div>
       </div>
       <div class="modal-footer">
-        <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+        <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Done</a>
       </div>
     </div>
 </span>
@@ -106,6 +122,7 @@
     };
     firebase.initializeApp(config);
 </script>
+<script src='../scripts/command.js'></script>
 <script src="educator-dashboard.js"></script>
 </body>
 
