--- a/dashboard.html
+++ b/dashboard.html
@@ -80,7 +80,7 @@
 
 
                 <!-- <a id="user-name" href='profile-page.html' hidden>Username</a> -->
-                <a id="user-name" href=# hidden>Username</a> <!--Made dead link while profile-page is under development-->
+                <a id="user-name" href="profile-page.html" hidden>Username</a> <!--Made dead link while profile-page is under development-->
 
 
             </li>
