--- a/educator/educator-login.html
+++ b/educator/educator-login.html
@@ -113,15 +113,18 @@
             <div class="row">
 
               <div class="input-field col s6 l6 m6">
+                <i class="tiny material-icons prefix">account_circle</i>
+
                 <input name="email-address" type="text" class="validate">
                 <label for="email">Email Address</label>
               </div>
               <div class="input-field col s6 l6 m6">
+                <i class="tiny material-icons prefix">lock</i>
                 <input name="password" type="password" class="validate">
                 <label for="password">Password</label>
               </div>
             </div>
-            <a id="login-btn" class="waves-effect waves-light btn" disabled><i class="material-icons left">account_circle</i>Sign In</a>
+            <a id="login-btn" class="waves-effect waves-light btn" disabled>Sign In</a>
             <p style="margin-top: 10px; text-align: center;">Don't have an account? <a href="#tosignup" id="sign-up">Sign-up</a> </p>
           </form>
         </div>
@@ -139,10 +142,12 @@
             <div class="row">
 
               <div class="input-field col s6">
+                <i class="small material-icons prefix">account_circle</i>
                 <input name="email-address" type="text" class="validate">
                 <label for="email">Email Address</label>
               </div>
               <div class="input-field col s6">
+                <i class="tiny material-icons prefix">lock</i>
                 <input name="password" type="password" class="validate">
                 <label for="password">Password</label>
               </div>
@@ -150,11 +155,12 @@
 
             <div class="row">
               <div class="input-field col s12">
+                <i class="tiny material-icons prefix">school</i>
                 <input name="school-name" type="text">
                 <label>School Name</label>
               </div>
             </div>
-            <a id="create-account-btn" class="waves-effect waves-light btn" style="width: 100%" disabled><i class="material-icons left">account_circle</i>Create My Account!</a>
+            <a id="create-account-btn" class="waves-effect waves-light btn" style="width: 100%" disabled>Create My Account</a>
             <p style="margin-top: 10px; text-align: center;">Already have an account? <a href="#tologin" id="login">Log-in</a> </p>
 
           </form>
