Prevent user-card from showing in stat-summary until user info has been loaded.

--- a/landingpage.html
+++ b/landingpage.html
@@ -39,8 +39,8 @@
 </head>
 
 <body>
-    <h1 id="title">World Without Borders</h1>
-    <img class="www-logo responsive-img" src="images/base_transparent.png"></img>
+    <img class="www-logo responsive-img" src="images/base_transparent.png" width="200px", height="200px"></img>
+    <h2 id="title">World Without Borders</h1>
     <a class="btn red lighten-1 waves-light waves-effect" href=# id="get-started">Get Started</a>
 
   <!--Firebase-->
