Changed the About Page. Also added code for the Frequently Asked Questions Modal. FAQ modal still needs work.

--- a/dashboard.html
+++ b/dashboard.html
@@ -542,6 +542,23 @@
         </div>
     </div>
 
+<!-- Frequently Asked Questions Modal -->
+<div id="faq-modal" class="modal">
+<div class="modal-content">
+<h4>Frequently Asked Questions</h4>
+<h5>Question 1</h5>
+<h5>Question 1 Answer</h5>
+</div>
+<button class="modal-action modal-close red lighten-1 btn waves-effect waves-light">
+              </span>Close\</span>
+            </button>
+</div>
+
+<div class="modal-footer">
+            <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Done</a>
+        </div>
+    </div>
+
 
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
