Styled the profile page a litte. It still needs to be styled.

--- a/profile-page.html
+++ b/profile-page.html
@@ -16,13 +16,13 @@
 	</head>
 
 	<body style="display:none;">
-		<a href="./dashboard.html">Back to conversations</a>
-		<img id="profile-pic" src=#></img>
+		<a style="margin-top: 10px; width: 400px" class="center-align btn waves-light waves-effect red lighten-1" id="back-button" href="dashboard.html">Back to conversations</a>
+		<img id="profile-pic" src=# width="400px" height="400px"></img>
 		<h2 id="display-name"></h2>
 		<h2 id="email"></h2>
 		<h2 id="timezone"></h2>
-		Click <a href="account-info-sync.html?editProfile=true">here</a> to edit your profile.
-		Click <a href="stat-summary.html">here</a> for your stat summary.
+		 <a style="margin-top: 10px; width: 400px" class="center-align btn waves-light waves-effect red lighten-1" href="account-info-sync.html?editProfile=true">Click here to edit your profile.</a> 
+		<a style="margin-top: 10px; width: 400px" class="center-align btn waves-light waves-effect red lighten-1" href="stat-summary.html">Click here for your stat summary.</a> 
 
 		<!--Firebase-->
 	  <script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
